# simple_ECM

./: .gitignore  CMakeLists.txt  Components.hpp  Ecm.hpp  README.md  Types.hh  View.hpp  each_benchmark.cc  main.cc
include/: Components.hh  Ecm.hh  View.hh
include/simpleECM/: Components.hh  Ecm.hh  Types.hh  View.hh
src/: main.cc
test/: each_benchmark.cc  memory_usage.cc
test/include/: BenchmarkRunnerFactory.hh  EnttBenchmarkRunner.hh  EnttGroupBenchmarkRunner.hh  EnttViewBenchmarkRunner.hh  IgnGazeboBenchmarkRunner.hh  SimpleECMBenchmarkRunner.hh
test/include/benchmark/: BenchmarkRunner.hh  BenchmarkRunnerFactory.hh  EnttGroupBenchmarkRunner.hh  EnttViewBenchmarkRunner.hh  IgnGazeboBenchmarkRunner.hh  SimpleECMBenchmarkRunner.hh
test/include/memory/: IgnGazeboMemoryRunner.hh  MemoryRunner.hh  MemoryRunnerFactory.hh  SimpleECMMemoryRunner.hh
